# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fileencoding=utf-8 tabstop=4:

2011-06-23 Michael Truog   <mjtruog [at] gmail (dot) com>

    * CloudI version 0.1.7 (alpha) released
    * autoconf build system bug fixed
    * Updated FAQ documentation

2011-05-14 Michael Truog   <mjtruog [at] gmail (dot) com>

    * CloudI version 0.1.6 (alpha) released
    * autoconf/automake/rebar build system fixed in many ways
    * Add FAQ documentation and more source code comments

2011-04-25 Michael Truog   <mjtruog [at] gmail (dot) com>

    * CloudI version 0.1.5 (alpha) released
    * build system fixes

2011-04-23 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Job API jobs_remove() now takes UUIDs and
      jobs() returns tuples with the UUID as the key
    * message UUIDs now include the distributed Erlang node name

2011-04-15 Michael Truog   <mjtruog [at] gmail (dot) com>

    * CloudI version 0.1.4 (alpha) released
    * Job API tested with JSON-RPC and Erlang formats over HTTP
    * Add python Job API JSON-RPC source code
    * Add python test of the Job API

2011-04-08 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add jsx
    * Update misultin and erlzmq
    * Add the flood test
    * Fix possible API encoding errors

2011-03-29 Michael Truog   <mjtruog [at] gmail (dot) com>

    * various bugfixes
    * CloudI version 0.1.3 (alpha) released

2011-03-27 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix erlzmq problems, switch to R14B02 for erlzmq/ZeroMQ testing
    * Improve cloudi_job_zeromq
    * Fix Erlang service API (cloudi_job) bugs

2011-03-24 Michael Truog   <mjtruog [at] gmail (dot) com>

    * ZeroMQ autoconf integration to provide erlzmq2
    * Add cloudi_job_zeromq service for ZeroMQ bridge
    * Add send_async_active API calls to Erlang CloudI API
      (with send_async_passive == send_async) to avoid blocking

2011-03-21 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix installation problems