@@ -1,90 +1,14 @@
+(testing the same XML request/response with a query string as found here
+ http://www.ostinelli.net/a-comparison-between-misultin-mochiweb-cowboy-nodejs-and-tornadoweb/)
+
 Recent results for a single OS process and no threads
 (with the command line below)
 
 
 (doing a test similar to http://nichol.as/benchmark-of-python-web-servers
  but with harsher constraints)
-$ httperf --client=0/1 --server=127.0.0.1 --port=8080  --uri=/tests/http_req/c.html --send-buffer=4096 --recv-buffer=16384 --num-conns=400 --num-calls=10 --rate=8000
-httperf --client=0/1 --server=127.0.0.1 --port=8080 --uri=/tests/http_req/c.html --rate=8000 --send-buffer=4096 --recv-buffer=16384 --num-conns=400 --num-calls=10
-Maximum connect burst length: 66
-
-Total: connections 400 requests 4000 replies 4000 test-duration 0.820 s
-
-Connection rate: 487.9 conn/s (2.0 ms/conn, <=400 concurrent connections)
-Connection time [ms]: min 455.1 avg 761.3 max 772.9 median 765.5 stddev 20.1
-Connection time [ms]: connect 1.7
-Connection length [replies/conn]: 10.000
-
-Request rate: 4878.9 req/s (0.2 ms/req)
-Request size [B]: 81.0
-
-Reply rate [replies/s]: min 0.0 avg 0.0 max 0.0 stddev 0.0 (0 samples)
-Reply time [ms]: response 76.0 transfer 0.0
-Reply size [B]: header 63.0 content 84.0 footer 0.0 (total 147.0)
-Reply status: 1xx=0 2xx=4000 3xx=0 4xx=0 5xx=0
-
-CPU time [s]: user 0.02 system 0.49 (user 2.4% system 59.8% total 62.2%)
-Net I/O: 1086.3 KB/s (8.9*10^6 bps)
-
-Errors: total 0 client-timo 0 socket-timo 0 connrefused 0 connreset 0
-Errors: fd-unavail 0 addrunavail 0 ftab-full 0 other 0
+$ httperf --client=0/1 --server=127.0.0.1 --port=8080  --uri=/tests/http_req/c.xml --send-buffer=4096 --recv-buffer=16384 --num-conns=400 --num-calls=10 --rate=8000
 
 
-
-
-$ ab -n 8000 -c 1000 http://127.0.0.1:8080/tests/http_req/c.html
-This is ApacheBench, Version 2.3 <$Revision: 655654 $>
-Copyright 1996 Adam Twiss, Zeus Technology Ltd, http://www.zeustech.net/
-Licensed to The Apache Software Foundation, http://www.apache.org/
-
-Benchmarking 127.0.0.1 (be patient)
-Completed 800 requests
-Completed 1600 requests
-Completed 2400 requests
-Completed 3200 requests
-Completed 4000 requests
-Completed 4800 requests
-Completed 5600 requests
-Completed 6400 requests
-Completed 7200 requests
-Completed 8000 requests
-Finished 8000 requests
-
-
-Server Software:        
-Server Hostname:        127.0.0.1
-Server Port:            8080
-
-Document Path:          /tests/http_req/http
-Document Length:        84 bytes
-
-Concurrency Level:      1000
-Time taken for tests:   1.487 seconds
-Complete requests:      8000
-Failed requests:        0
-Write errors:           0
-Total transferred:      1136000 bytes
-HTML transferred:       672000 bytes
-Requests per second:    5381.28 [#/sec] (mean)
-Time per request:       185.829 [ms] (mean)
-Time per request:       0.186 [ms] (mean, across all concurrent requests)
-Transfer rate:          746.23 [Kbytes/sec] received
-
-Connection Times (ms)
-              min  mean[+/-sd] median   max
-Connect:        0    3   7.8      0      36
-Processing:    19  105  19.1    106     149
-Waiting:       18  104  19.1    105     148
-Total:         53  107  16.8    107     170
-
-Percentage of the requests served within a certain time (ms)
-  50%    107
-  66%    111
-  75%    117
-  80%    120
-  90%    125
-  95%    139
-  98%    145
-  99%    149
- 100%    170 (longest request)
+$ ab -n 8000 -c 1000 http://127.0.0.1:8080/tests/http_req/c.xml
 
