@@ -1,6 +1,17 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fileencoding=utf-8 tabstop=4:
 
+2011-08-16 Michael Truog   <mjtruog [at] gmail (dot) com>
+
+    * http_req C test now handles query strings
+    * All requests and responses now have a terminating null ('\0')
+      character that is not included in their length, so that it is
+      easier to use C string functions without errors.
+
+2011-08-13 Michael Truog   <mjtruog [at] gmail (dot) com>
+
+    * rebar/reltool bug fixed for Erlang R14B03
+
 2011-06-23 Michael Truog   <mjtruog [at] gmail (dot) com>
 
     * CloudI version 0.1.7 (alpha) released
